--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+.main_div{
+  width:100%;
+  height:100vh;
+  background:rgb(168, 27, 168);
+ display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+
+}
+button{
+  min-height:40px ;
+  width: 40px;
+  border-radius: 5%;
+  background-color: rgb(98, 189, 8);
+  border-color: transparent;
+  color: grey;
+  margin-left: 10px;
+  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+
+}
