--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,87 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.main_div{
+  width:100%;
+  height:100vh;
+  background:rgb(168, 27, 168);
+ display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+
+}
+button{
+ 
+  font-size: 50px;
+  background-color:transparent;
+border: none;
+  color: #f8f1f4;
+  margin-left: 10px;
+ 
+  font-weight: 500;
+
+}
+button:hover{
+  font-size: 50px;
+  background-color:transparent;
+
+  margin-left: 10px;
+
+  font-weight: 500;
+  color: #04880f;
+
+}
+.madhala_card{
+  width: 35%;
+  height: 70vh;
+  background-color:rgb(241, 45, 143) ;
+  box-shadow: 5px 5px 25px -5px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  margin-top: 3rem;
+  
+}
+h1{
+  margin-top: 20px;
+  font-size: 40px;
+  margin-bottom: 30px;
+  min-width: 64px;
+  box-sizing: border-box;
+  font-family: "Comfortaa",cursive;
+  font-weight: 500;
+  border-radius: 4px;
+  letter-spacing: 0.02857em;
+  text-transform: uppercase;
+  text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+}
+input{
+  text-align: center;
+  height: 30px;
+  border: none;
+  background: transparent;
+  font-size: 20px;
+  font-weight: 500;
+  width: 60%;
+  border-bottom: 2px solid#1f0144;
+  outline: none;
+  margin-right: 20px; 
+}
+ol{
+  margin-top:30px;
+
+
+}
+ol li{
+  padding-left: 0px;
+  text-align: center;
+  font-size: 20px;
+  font-weight:500;
+  min-height: 40px;
+  display: flex;
+  align-items: center;
+  color: #170231;
+  text-transform: capitalize;
+  list-style: none;
+  margin-left: 1rem;
+
+}
